[markerDeleteButton] Update styling and fix z-index issue with marker video clip.

--- a/plugins/markerDeleteButton/markerDeleteButton.css
+++ b/plugins/markerDeleteButton/markerDeleteButton.css
@@ -4,8 +4,13 @@
 
 .marker-delete-button {
   display: none;
+  opacity: 0.25;
   position: absolute;
   top: 5px;
   right: 5px;
-  opacity: 0.25;
+  z-index: 999;
+}
+
+.marker-delete-button:hover {
+  opacity: 0.75;
 }
